force-app/main/default/objects/SIM_Activation_API_Details__c/SIM_Activation_API_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SIM Activation API Details</label>
</CustomObject>