force-app/main/default/objects/SIM_Activation_API_Details__c/fields/Basu_URL__c.field-meta.xml
<CustomField>
    <fullName>Basu_URL__c</fullName>
    <label>Basu URL</label>
    <type>TextArea</type>
</CustomField>