force-app/main/default/objects/SIM_Activation_API_Details__c/fields/Deal_Id_A_to_SC__c.field-meta.xml
<CustomField>
    <fullName>Deal_Id_A_to_SC__c</fullName>
    <label>Deal Id(A to SC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>