force-app/main/default/objects/SIM_Activation_API_Details__c/fields/Deal_Id_SC_to_A__c.field-meta.xml
<CustomField>
    <fullName>Deal_Id_SC_to_A__c</fullName>
    <label>Deal Id(SC to A)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>